refined the improved caption further

--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -327,12 +327,13 @@ Pairs with $R(P_{\text{dist}})=0$ are excluded from $\Delta_R$ due to the undefi
 
 \begin{figure*}[ht]
   \centering
-  \include{figs/visual_app.tex}
-  \caption{\textbf{Detailed investigation of junction 2482.}
+  \includegraphics{figs/risk_3_panel.pdf}
+  \caption{\textbf{Risk heatmap and detailed inspection of junction 2482.}
+  The colors \coolwarmbox \space in panels (a) and (b)  indicate their log-scaled risk values, ranging from low risk {\color{TUblue}(blue)} to high risk {\color{TUred}(red)}.
   Panel (a) shows a section of the Strava bike network in Berlin with all computed road segments and junctions displayed. 
   Panel (b) provides a closer view of junction 2482, displaying the 22 crashes assigned to this junction. 
   (c) shows a street-level view of junction 2482 \citep{streetview2024}, providing visual context for the observed risk.
-  The colors \coolwarmbox \space in panels (a) and (b)  indicate their log-scaled risk values, ranging from low risk {\color{TUblue}(blue)} to high risk {\color{TUred}(red)}.}  
+  }  
   \label{fig:junction_details}
 \end{figure*}
 
