edited bibtex entries for consistency

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -13,13 +13,15 @@
 }
 
 @article{Kaiser_Klein_Kaack_2025,
- author = {Kaiser, Silke K. and Klein, Nadja and Kaack, Lynn H.},
- doi = {10.1017/eds.2025.5},
- journal = {Environmental Data Science},
- pages = {e13},
- title = {From counting stations to city-wide estimates: data-driven bicycle volume extrapolation},
- volume = {4},
- year = {2025}
+  title = {From counting stations to city-wide estimates: data-driven bicycle volume extrapolation},
+  volume = {4},
+  ISSN = {2634-4602},
+  url = {http://dx.doi.org/10.1017/eds.2025.5},
+  DOI = {10.1017/eds.2025.5},
+  journal = {Environmental Data Science},
+  publisher = {Cambridge University Press (CUP)},
+  author = {Kaiser,  Silke K. and Klein,  Nadja and Kaack,  Lynn H.},
+  year = {2025}
 }
 
 @misc{kaiser2025spatiotemporalgraphneuralnetwork,
@@ -191,69 +193,77 @@ Volume},
 }
 
 @misc{streetview2024,
-  author       = {{Google}},
-  title        = {{Google Street View: Junction Heinrich-Mann-Straße/Hermann-Hesse-Straße Berlin}},
-  url          = {https://maps.app.goo.gl/pxxqfSwW8Rbtu6AZ8},
-  year         = {2025},
-  urldate      = {2025-12-05} 
+ author = {{Google}},
+ title = {{Google Street View: Junction Heinrich-Mann-Straße/Hermann-Hesse-Straße Berlin}},
+ url = {https://maps.app.goo.gl/pxxqfSwW8Rbtu6AZ8},
+ urldate = {2025-12-05},
+ year = {2025}
 }
 
 @article{Dijkstra1959,
-  title = {A note on two problems in connexion with graphs},
-  volume = {1},
-  ISSN = {0945-3245},
-  url = {http://dx.doi.org/10.1007/BF01386390},
-  DOI = {10.1007/bf01386390},
-  number = {1},
-  journal = {Numerische Mathematik},
-  publisher = {Springer Science and Business Media LLC},
-  author = {Dijkstra,  E. W.},
-  year = {1959},
-  month = dec,
-  pages = {269–271}
+ author = {Dijkstra,  E. W.},
+ doi = {10.1007/bf01386390},
+ issn = {0945-3245},
+ journal = {Numerische Mathematik},
+ number = {1},
+ pages = {269–271},
+ publisher = {Springer Science and Business Media LLC},
+ title = {A note on two problems in connexion with graphs},
+ url = {http://dx.doi.org/10.1007/BF01386390},
+ volume = {1},
+ year = {1959}
 }
 
 @online{BerlinZaehlen_Fahrradbarometer,
-  author  = {{Senatsverwaltung für Mobilität, Verkehr, Klimaschutz und Umwelt}},
-  title   = {Zählstellen und Fahrradbarometer: Fahrradverkehr in Zahlen},
-  url     = {https://www.berlin.de/sen/uvk/mobilitaet-und-verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/},
-  urldate = {2026-01-31},
-  langid  = {german}
+ author = {{Senatsverwaltung für Mobilität, Verkehr, Klimaschutz und Umwelt}},
+ langid = {german},
+ title = {Zählstellen und Fahrradbarometer: Fahrradverkehr in Zahlen},
+ url = {https://www.berlin.de/sen/uvk/mobilitaet-und-verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/},
+ urldate = {2026-01-31}
 }
 
 @misc{Unfallatlas2025,
-  author       = {{Destatis}},
-  year         = {2025},
-  title        = {German Accident Atlas},
-  url           = {https://unfallatlas.statistikportal.de/},
-  note         = {Retrieved January 14 2026}
+ author = {{Destatis}},
+ note = {Retrieved January 14 2026},
+ title = {German Accident Atlas},
+ url = {https://unfallatlas.statistikportal.de/},
+ year = {2025}
 }
 
 @misc{BerlinRadverkehrzaehlstellen2023,
-  author       = {{Senate Department for Urban Mobility, Transport, Climate Action and the Environment}},
-  title        = {Radverkehrsz{\"a}hlstellen -- Jahresbericht 2023},
-  year         = {2024},
-  month        = may,
-  url          = {https://www.berlin.de/sen/uvk/_assets/verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/bericht_radverkehr_2023.pdf?ts=1752674590},
-  note         = {Stand: 31.05.2024 (Berlin, Mai 2024). Accessed: 2026-02-01}
+ author = {{Senate Department for Urban Mobility, Transport, Climate Action and the Environment}},
+ note = {Stand: 31.05.2024 (Berlin, Mai 2024). Accessed: 2026-02-01},
+ title = {Radverkehrsz{\"a}hlstellen -- Jahresbericht 2023},
+ url = {https://www.berlin.de/sen/uvk/_assets/verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/bericht_radverkehr_2023.pdf?ts=1752674590},
+ year = {2024}
 }
 
 @article{dadashova2020estimation,
-  title={Estimation of average annual daily bicycle counts using crowdsourced Strava data},
-  author={Dadashova, Bahar and Griffin, Greg P and Das, Subasish and Turner, Shawn and Sherman, Bonnie},
-  journal={Transportation research record},
-  volume={2674},
-  number={11},
-  pages={390--402},
-  year={2020},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  title = {Estimation of Average Annual Daily Bicycle Counts using Crowdsourced Strava Data},
+  volume = {2674},
+  ISSN = {2169-4052},
+  url = {http://dx.doi.org/10.1177/0361198120946016},
+  DOI = {10.1177/0361198120946016},
+  number = {11},
+  journal = {Transportation Research Record: Journal of the Transportation Research Board},
+  publisher = {SAGE Publications},
+  author = {Dadashova,  Bahar and Griffin,  Greg P. and Das,  Subasish and Turner,  Shawn and Sherman,  Bonnie},
+  year = {2020},
+  month = sep,
+  pages = {390–402}
 }
 
 @article{clayton1987empirical,
-  title={Empirical Bayes estimates of age-standardized relative risks for use in disease mapping},
-  author={Clayton, David and Kaldor, John},
-  journal={Biometrics},
-  pages={671--681},
-  year={1987},
-  publisher={JSTOR}
+  title = {Empirical Bayes Estimates of Age-Standardized Relative Risks for Use in Disease Mapping},
+  volume = {43},
+  ISSN = {0006-341X},
+  url = {http://dx.doi.org/10.2307/2532003},
+  DOI = {10.2307/2532003},
+  number = {3},
+  journal = {Biometrics},
+  publisher = {JSTOR},
+  author = {Clayton,  David and Kaldor,  John},
+  year = {1987},
+  month = sep,
+  pages = {671}
 }
